--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@types/jsdom": "^21.1.6",
     "astro": "^4.7.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.12.1",
